# macro-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json  settings.local.json
config/: asset_themes.json  benchmarks.json  manual_chart_framework.md  newsletter_sources.json  regime_mapping.json  regime_outcomes.json  source_routing.json  sources.example.json  sources.json  trading_framework.json  watchlist.json
data/: checklist.json  decisions.json
docs/: agent_roster.md  architecture.md  architecture_overview.md  dashboard_design_brief.md  data_sources.md  deployment.md  improvements_2026_04_05.md  input_checklist.md  inputs_pipeline.md  integration_with_trading_agent.md  logging_contract.md  macro_thesis_investor_memo_v3.docx  macro_thesis_v3.md  trading_framework.docx  trading_framework.md  workstreams.md
integration_schema/: macro_schema_v1.0.0.json
scripts/: export_integration_schema.py
tests/: test_actionable_signals.py  test_brain_api.py  test_brain_feature_vector.py  test_brain_liquidity_alignment.py  test_brain_orchestrator.py  test_brain_psychology_evaluator.py  test_brain_relative_strength.py  test_brain_sector_theme_strength.py  test_brain_transcription.py  test_brain_volume_flow_confirmation.py  test_cot_provider.py  test_extractor.py  test_finnhub_connector.py  test_freshness.py  test_gmail_connector.py  test_google_news_rss.py  test_integration_regime_push.py  test_learning_author_calibration.py  test_learning_mention_precision.py  test_learning_model_version.py  test_learning_quality_scorer.py  test_learning_regime_accuracy.py  test_learning_retraining_triggers.py  test_learning_score_correlation.py  test_learning_source_attribution.py  test_macro_indicators.py  test_manual_input_multi_image.py  test_memo.py  test_pipeline.py  (+11 more)
(+142 files in other folders)
