[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-positioning-analyzer"
version = "0.1.0"
description = "Research operating system for collecting, extracting, and synthesizing macro positioning views."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.70.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.116.0",
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "uvicorn>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
stream-a = [
  "google-auth>=2.30.0",
  "google-auth-oauthlib>=1.2.0",
  "google-api-python-client>=2.100.0",
  "apscheduler>=3.10.0",
  "feedparser>=6.0.10",
]

[project.scripts]
macro-positioning = "macro_positioning.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
